# sparkinfer

./: .env.eval.example  CHANGELOG.md  README.md
.github/: COPYCATS.md  FLAGGED.md  blocked-contributors.txt  copycats.json
.github/workflows/: copycat-guard.yml
bench/quality/: README.md  run_quality.py  scorers.py
bench/scripts/: evaluate.sh  evaluate_bidir.sh  evaluate_dual.sh
dashboard/: data.js  data.json  index.html
docs/: miner-guide.md
eval/: README.md  copycat_guard.py  copycat_sweep.py  pr_eval_bot.py  run_bot_cron.sh  test_pr_eval_bot.py  vast_eval.py
examples/: qwen3_gguf_generate.cpp
include/sparkinfer/models/: qwen35.h
kernels/csrc/cuda/attention/: flash_decode_split.cu  rope.cu
kernels/csrc/cuda/fused/: qwen36.cu
kernels/csrc/cuda/gemm/: gemv.cu
kernels/include/sparkinfer/kernels/: attention.h  gemm.h
python/sparkinfer_runtime/: __init__.py
results/: qwen3-30b-a3b_q4km_pro6000.md
runtime/: .gitignore  CMakeLists.txt  README.md
runtime/csrc/cuda/: kv_ops.cu
runtime/examples/: qwen35_generate.cpp  qwen3_gguf_bench.cpp  qwen3_gguf_config.h  qwen3_gguf_generate.cpp  qwen3_gguf_score.cpp
runtime/include/sparkinfer/: decode.h  gguf.h  kv_cache.h  kv_ops.h  runtime.h  scheduler.h
runtime/include/sparkinfer/models/: qwen35.h  qwen_config.h
runtime/scripts/: build.sh
runtime/src/: decode_layer.cpp  gguf.cpp  kv_cache.cpp  runtime.cpp  scheduler.cpp
runtime/src/models/: qwen35.cpp
runtime/tests/: CMakeLists.txt  decode_layer_cpu_test.cpp  decode_runner_gpu_test.cpp  qwen35_gpu_test.cpp  scheduler_cpu_test.cpp
runtime/tools/: convert_gguf.py  convert_qwen35.py
src/models/: qwen35.cpp
tests/: CMakeLists.txt  qwen35_cpu_test.cpp
tools/: convert_qwen35.py  run_qwen3.py
